# adguard-manager

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: gen-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dns.rs  lib.rs  main.rs  monitor.rs  storage.rs  types.rs
ui/: app.js  index.html  style.css
