[package]
name = "adguard-manager"
version = "0.1.0"
edition = "2021"
description = "DNS ad blocker and network usage tracker powered by AdGuard DNS"
license = "MIT"
authors = ["Xyrus"]

[lib]
name = "adguard_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
